src/components/layout.css
body.light-mode {
  background-color: #fff;
  color: #000000;
  transition: background-color 0.3s ease;
  --color-primary: #0060df;
  --color-secondary: #fbfbfe;
  --color-accent: #fd6f53;
  --font-color: #000000;
}
body.dark-mode {
  background-color: #1a1919;
  color: #ffffff;
  --color-primary: #0060df;
  --color-secondary: #fbfbfe;
  --color-accent: #fd6f53;
  --font-color: #ffffff;
}

h1 {
  font-size: 3rem;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  font-family: 'Montserrat',-apple-system,'BlinkMacSystemFont','Segoe UI','Roboto','Helvetica','Arial',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 700;
  text-rendering: optimizeLegibility;
  line-height: 1.1;
  color: var(--font-color);
  transition: color 0.2s;
}

h2 {
  font-size: 2.25rem;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  font-family: 'Montserrat',-apple-system,'BlinkMacSystemFont','Segoe UI','Roboto','Helvetica','Arial',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 700;
  text-rendering: optimizeLegibility;
  line-height: 1.1;
  color: var(--font-color);
  transition: color 0.2s;
}

h3 {
  font-size: 1.875rem;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  font-family: 'Montserrat',-apple-system,'BlinkMacSystemFont','Segoe UI','Roboto','Helvetica','Arial',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 700;
  text-rendering: optimizeLegibility;
  line-height: 1.1;
  color: var(--font-color);
  transition: color 0.2s;
}

h4 {
  font-size: 1.5rem;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  font-family: 'Montserrat',-apple-system,'BlinkMacSystemFont','Segoe UI','Roboto','Helvetica','Arial',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 700;
  text-rendering: optimizeLegibility;
  line-height: 1.1;
  color: var(--font-color);
  transition: color 0.2s;
}

p {
  /*font-size: 1.15rem;*/
  font-weight: normal;
  margin-left: 3px;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  letter-spacing: -0.003em;
    --baseline-multiplier: 0.179;
    --x-height-multiplier: 0.35;
  color: var(--font-color);
  transition: color 0.2s;
}

a {
  color: var(--font-color);
  text-decoration: none;
  transition: color 0.2s;
}

a:hover {
  color: #006aff;
}

.container {
  margin-left: 5px;
  margin-top: 20px;
}
.container h1 {
  font-family: sans-serif;
}
.container button {
  padding: 10px 20px;
  border: 0;
  border-radius: 5px;
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 15px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 30px;
  width: 30px;
  left: 0px;
  bottom: 4px;
  top: 0;
  bottom: 0;
  margin: auto 0;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  box-shadow: 0 0px 10px #2020203d;
  background: white url('https://i.ibb.co/FxzBYR9/night.png');
  background-repeat: no-repeat;
  background-position: center;
}

input:checked + .slider {
  background-color: #006aff;
}

input:focus + .slider {
  box-shadow: 0 0 1px #006aff;
}

input:checked + .slider:before {
  -webkit-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
  background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
  background-repeat: no-repeat;
  background-position: center;
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

/* Tablet */
@media (max-width: 1200px) {
  html {
    font-size: 15px;
  }
}

/* Phone */
@media (max-width: 600px) {
  html {
    font-size: 14px;
  }
}

